--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,40 @@
+# Core web framework
 fastapi==0.122.0
+starlette==0.50.0
 uvicorn==0.38.0
 
+# Data validation
+pydantic==2.12.4
+typing-extensions==4.15.0
+
+# MongoDB
+motor==3.7.1
+pymongo==4.15.4
+bson==0.6.0  # For ObjectId usage
+
+# Security / Authentication
+passlib==1.7.4
+python-jose==3.5.0
+bcrypt==4.0.1
+
+# Environment variables
+python-dotenv==1.2.1
+
+# Prometheus monitoring
+prometheus-fastapi-instrumentator==7.1.0
+prometheus-client==0.18.0
+
+# Torch / Audio / Transformers
 torch==2.9.1
 torchaudio==2.9.1
 transformers==4.57.1
-numpy==2.3.5
+numpy==1.26.4
 soundfile==0.13.1
-python-dotenv==1.2.1
-tensorflow==2.20.0   
+librosa==0.11.0
 
-motor==3.7.1
-pymongo==4.15.4
-passlib==1.7.4
-python-jose==3.5.0
+# TensorFlow (if you are actually using it)
+tensorflow==2.20.0
 
-jinja2==3.1.6
-prometheus-fastapi-instrumentator==1.12.1  
-prometheus-client==0.17.1
+# Testing
 pytest==9.0.2
 httpx==0.28.1
