--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ typing-extensions==4.15.0
 # MongoDB
 motor==3.7.1
 pymongo==4.15.4
-bson==0.6.0  # For ObjectId usage
+
 
 # Security / Authentication
 passlib==1.7.4
@@ -32,7 +32,7 @@ numpy==1.26.4
 soundfile==0.13.1
 librosa==0.11.0
 
-# TensorFlow (if you are actually using it)
+# TensorFlow 
 tensorflow==2.20.0
 
 # Testing
